src/test/deca/syntax/valid/created/class_syntax8.deca
class A{
	A methA(A a){
		return a;
	}
}

{}
