src/test/deca/syntax/invalid/created/faux31.deca
class A{
	int methA(){
		return true;
	}
}
{
	
}
